css/custom.css
/*
 *
 * Sticky footer styles from http://twitter.github.io/bootstrap/examples/sticky-footer.html.
 *
 */
html,
body {
	height: 100%;
	/* The html and body elements cannot have any padding or margin. */
}

/* Wrapper for page content to push down footer */
#wrap {
	min-height: 100%;
	height: auto !important;
	height: 100%;
	/* Negative indent footer by it's height */
	margin: 0 auto -60px;
}
/* So that content is not overlapped by navbar */
#wrap > .container {
	padding-top: 60px;
}

/* Set the fixed height of the footer here */
#push,
#footer {
	height: 60px;
}
#footer {
	background-color: #f5f5f5;
}
#push {
	margin-top: 20px;
}

/*
 *
 * Custom styles for the page.
 *
 */
#footer .credit {
	margin: 20px 0;
}

.image {
	display: block;
	width: 80%;
	margin: 0 auto;
}

/* undo weird padding from Bootstrap */
@media (max-width: 767px) {
	body {
		padding-left: 0;
		padding-right: 0;
	}
	
	#wrap, #footer {
		padding-left: 20px;
		padding-right: 20px;
	}
}

